# 42X007_Innovortex_Project

./: .gitignore  README.md  README_PREPARE_TO_PUSH.md  USAGE_GANACHE.md  launch_game.ps1  run_all.ps1  run_config.json.sample  run_no_build.ps1
.github/workflows/: windows-release.yml
GladiatorSFML/: CMakeLists.txt  GladiatorSFML.h
GladiatorSFML/GladiatorSFML/: GladiatorSFML.cpp
GladiatorSFML/src/: main.cpp  resources.hpp
PvP_BlockChain/: Animation.cpp  Animation.h  Arena.cpp  Arena.h  BackgroundVideo.cpp  BackgroundVideo.h  BattleLog.cpp  BattleLog.h  BridgeClient.cpp  BridgeClient.h  BridgeConfig.h  CMakeLists.txt  Fighter.cpp  Fighter.h  Game.cpp  Game.h  GamePlayState.cpp  GamePlayState.h  MainMenuState.cpp  MainMenuState.h  MapSelectionState.cpp  MapSelectionState.h  PauseGameState.cpp  PauseGameState.h  PvP_BlockChain.cpp  PvP_BlockChain.vcxproj  PvP_BlockChain.vcxproj.filters  State.h  StoreState.cpp  StoreState.h  WalletConfig.cpp  WalletConfig.h  Wallets.cpp  Wallets.h  Wallets.json  http_client.cpp  http_client.h
PvP_BlockChain/Debug/: PvP_BlockChain.exe.recipe  PvP_BlockChain.ilk  vc143.idb
PvP_BlockChain/Debug/PvP_BlockChain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PvP_BlockChain.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PvP_BlockChain/PvP_BlockChain/Debug/: vc143.idb
PvP_BlockChain/PvP_BlockChain/Debug/PvP_BlockChain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PvP_BlockChain.lastbuildstate
blockchain/: GameNFT.sol  deployed-address.txt  hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: GameNFT.sol
blockchain/scripts/: deploy.js
docs/: hosting.md
node_bridge/: .env.example  GameNFT.json  README.md  bridge.js  ganache_keys.json.sample  package-lock.json  package.json  test_mint.js  test_win.ps1
node_bridge/test/: deploy_and_run.js
scripts/: package_release.ps1
web/: index.html
web/releases/: README.md
